gcl (2.6.4-2) unstable; urgency=low

  * New gmp_wrappers.{c,h} files that prevent all GBC within gmp,
    obviating the need for gmp patches and a local gmp configure.  FIXME
    -- extend to all gmp functions in a systematic way, and write header
    information for future use in the compiler, making sure that plt.c
    carries the needed gmp symbols at this point

 -- Camm Maguire <camm@enhanced.com>  Thu, 12 Aug 2004 16:23:31 +0000

gcl (2.6.4-1) unstable; urgency=high

  * New upstream release
  * Make disassemble work when original system directory is gone
  * New debian/support files for debconf image default selection support
  * More descriptive compiled C function names for use in gprof when
    profiling is compiled in
  * Compiler fix for proclaimed vararg functions
  * Allow sharp numbers to be bignums
  * lintian fix in string-match
  * Prototype for alloca for lint
  * Improve gprof support
  * Improve sgc page allocation which optimize-maximum-pages is in
    effect and the hole is overrun
  * Build a profiling set of images as well for Debian, toggle between
    all four by default via debconf
  * reset-sys-paths lisp function for moving image installation
    directories, show profiling support in banner if present
  * Fix typo in sys docs
  * reset sys paths on installation

 -- Camm Maguire <camm@enhanced.com>  Thu,  5 Aug 2004 22:48:56 +0000

gcl (2.6.3-1) unstable; urgency=high

  * Correctly parse gcc version strings in gmp3 subconfigure on arm
  * Fix variable capture error in dotimes macro
  * Better sed separator for LI-CC in unixport/makefile
  * Fix segfault in string-match
  * vs_top=sup -> (reset-top) where possible in compiler.  FIXME: a few
    items of a different form which need to set *sup-used* too.
  * Correct room report to show proper percentages when sgc is on
  * Read in RELOC environment variable if set as default in debian/rules
  * Remove local bfd libraries from libs variables as their objects are