@@ -80,7 +80,7 @@ OBJS	= $(OD)main.o $(OD)alloc.o $(OD)gbc.o \
 	$(OD)funlink.o  $(OD)plt.o \
 	$(OD)fat_string.o ${ODIR}/run_process.o \
 	$(OD)nfunlink.o $(OD)usig.o $(OD)usig2.o $(OD)utils.o \
-	$(OD)makefun.o $(OD)sockets.o $(OD)clxsocket.o  \
+	$(OD)makefun.o $(OD)sockets.o $(OD)gmp_wrappers.o $(OD)clxsocket.o  \
 	$(OD)init_pari.o $(OD)nsocket.o $(NEW_INIT) $(MPFILES) $(SFASL) $(EXTRAS) \
 	$(RL_OBJS)
 
