@@ -5,8 +5,9 @@ gcl (2.6.4-2) unstable; urgency=low
     -- extend to all gmp functions in a systematic way, and write header
     information for future use in the compiler, making sure that plt.c
     carries the needed gmp symbols at this point
+  * Build support for gmp_wrappers
 
- -- Camm Maguire <camm@enhanced.com>  Thu, 12 Aug 2004 16:23:31 +0000
+ -- Camm Maguire <camm@enhanced.com>  Thu, 12 Aug 2004 16:27:07 +0000
 
 gcl (2.6.4-1) unstable; urgency=high
 
